# Advent-of-code-24

day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: day04-1.py  day04-2.py
day05/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day23/: Cargo.toml
template/: Cargo.toml  cargo-generate.toml
