[package]
name = "day03"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#itertools.workspace = true
nom = {version = "7.1.3", features = ["alloc"]}
#tracing.workspace = true
#tracing-subscriber.workspace = true
#miette.workspace = true

#[dev-dependencies]
#divan.workspace = true
#rstest.workspace = true
#test-log.workspace = true

#[[bench]]
#name = "day03-bench"
#path = "benches/benchmarks.rs"
#harness = false
